--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My page: username will go here</title>
+    <title>My page: {{username}}</title>
     </head>
     <body>
         <h1>{{username}}'s Bookings</h1>
@@ -13,7 +13,6 @@
             <div class="booking-list">
                 Booking #{{booking["booking_id"]}}<br>
                 You're staying at {{booking["space_name"]}} on {{booking["booking_date"]}}
-
             </div>
             {% endfor %}
         </div>
