adds book now button to homepage which links to single space page

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,12 @@
 
     <h2>Spaces</h2>
     {% for space in spaces %}
-
+    <form action="/" method="POST"
     <div class="space-container">
         <div class="space-header">{{space.name}}</div>
         <div class="space-description">{{space.description}}</div>
-        <div class="space-price">From £{{space.price}} per night!</div><br>
+        <div class="space-price">From £{{space.price}} per night!</div>
+        <button type="submit" name="book_now_button" value="{{space.id}}">Book Now!</button><br>
     </div>
     {% endfor %}
 </html>
