Bugfix: corrected URL typo on My Profile link

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <div class="navigation" align="right">
         {% if user_id %}
-        <p><a href="/user/{{ user_id }}">My Profile</a></p>
+        <p><a href="/users/{{ user_id }}">My Profile</a></p>
         <p><a href="/logout">Logout</a></p>
         {% else %}
         <p><a href="/login">Login</a></p>
