adds link back to homepage from user pager

--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My page: {{username}}</title>
+    <p><a href="/">See More Spaces and Make a New Booking!</a></p>
+
     </head>
     <body>
         <h1>{{username}}'s Bookings</h1>
