--- a/templates/spaces/confirm_booking.html
+++ b/templates/spaces/confirm_booking.html
@@ -6,16 +6,17 @@
 </head>
 <body>
 
-    Confirm Booking
+    <h2>Confirm Booking</h2>
+    
+    <p>Booking details:</p>
+    <p>Proeprty: {{ space_info.name }}</p>
+    <p>Date: {{ formatted_date }}</p>
 
-    <p>INSERT BOOKING DETAILS</p>
-    <p>GET BOOKING DATE FROM SESSION</p>
-
-    <form action='/spaces/<space_id>/confirm'method="POST">
+    <form action='/spaces/{{space_info.id}}/confirm'method="POST">
         <input type="submit" name="confirm_button" value="Confirm">
     </form>
 
-    <form action='/spaces/<space_id>/confirm' method="POST">
+    <form action='/spaces/{{space_info.id}}/confirm' method="POST">
         <input type="submit" name="cancel_button" value="Cancel">
     </form>
     
