makes changes to the userpage and adds confirm and reject button

--- a/templates/spaces/confirm_booking.html
+++ b/templates/spaces/confirm_booking.html
@@ -13,7 +13,7 @@
     <p>Date: {{ formatted_date }}</p>
 
     <form action='/spaces/{{space_info.id}}/confirm'method="POST">
-        <input type="submit" name="confirm_button" value="Confirm">
+        <input type="submit" name="confirm_button" value="Request">
     </form>
 
     <form action='/spaces/{{space_info.id}}/confirm' method="POST">
