fixed issue with confirm and delete buttons on user profile page

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
             </p>
             <p>
                 <label for="password">Password: </label>
-                <input type="text" name="password" id="password" data-testid="password">
+                <input type="password" name="password" id="password" data-testid="password">
             </p>
             <p>
                 <input type="submit" value="Submit form">
