--- a/templates/home.html
+++ b/templates/home.html
@@ -20,13 +20,17 @@
     <h2>Spaces</h2>
     {% for space in spaces %}
     <div class="space-container">
-        <div class="space-header">{{space.name}}</div>
+        
+        <div class="space-header"><h2>{{space.name}}</h2></div>
         <div class="space-description">{{space.description}}</div>
         <div class="space-price">From £{{space.price}} per night!</div>
+        <br>
         {% if session_active == True %}
         <form action="/" method="POST">
             <button type="submit" name="book_now_button" value="{{space.id}}">Book Now!</button><br>
         </form>
+        <br>
+    
         {% endif %}
     </div>
     {% endfor %}
