--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -28,15 +28,16 @@
                 Booking #{{request['booking_id']}}<br>
                 You have a request for {{request['name']}} on {{request.date}}
 
-            <form action="/users/{{user_id}}" methods="POST">
+            <form action="/users/{{user_id}}" method="POST">
                 <button type="submit" name="confirm-booking" value="{{request['booking_id']}}">Confirm Booking</button>
             </form>
 
-            <form action="/users/{{user_id}}" methods="POST">
+            <form action="/users/{{user_id}}" method="POST">
                 <button type="submit" name="reject-booking" value="{{request['booking_id']}}">Reject Booking</button>
             </form>
 
             </div>
             {% endfor %}
+       </div>
     </body>
 </html>
