adds link to css file in all template files

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>MBnB Home Page</title>
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
     <div class="navigation" align="right">
         {% if user_id %}
         <p><a href="/users/{{ user_id }}">My Profile</a></p>
@@ -12,7 +14,6 @@
     </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBnB Home Page</title>
 </head>
 <body>
     <h1>MBnB</h1>
