--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Log in to MBnB</title>
+        <link rel="stylesheet" type="text/css" href="static/styles.css">
+
     </head>
     <body>
         <h1>Enter your login details</h1>
