--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Create your MBnB account</title>
+        <link rel="stylesheet" type="text/css" href="static/styles.css">
+
     </head>
     <body>
         {% if user_is_logged_in %}
