--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>MBnB</h1>
+    <h1 class="main-title">🏘️ MBnB</h1>
 
-    <h2>Spaces</h2>
+    <h2>Book a Space</h2>
     {% for space in spaces %}
     <div class="space-container">
         
@@ -34,6 +34,7 @@
     
         {% endif %}
     </div>
+    <br>
     {% endfor %}
 </body>
 </html>
