--- a/templates/spaces/confirm_booking.html
+++ b/templates/spaces/confirm_booking.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirm Booking</title>
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <link rel="stylesheet" type="text/css" href="../../static/styles.css">
 </head>
 <body>
 
