--- a/templates/spaces/single_space.html
+++ b/templates/spaces/single_space.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <link rel="stylesheet" type="text/css" href="../../static/styles.css">
     <title>Calendar</title>
 </head>
 <body>
