--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My page: {{username}}</title>
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">
     <p><a href="/">See More Spaces and Make a New Booking!</a></p>
 
     </head>
