added link to create_space form from user-page

--- a/templates/spaces/create_space.html
+++ b/templates/spaces/create_space.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>List a new space on MBnB</title>
-        <link rel="stylesheet" type="text/css" href="../static/styles.css">
+        <link rel="stylesheet" type="text/css" href="../../static/styles.css">
     </head>
     <body>
         <p><a href="/">Back to homepage</a></p>
