--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -9,6 +9,7 @@
 
     </head>
     <body>
+        <a href="/users/{{user_id}}/create_space">List a new space</a>
         <h1>{{username}}'s Bookings for upcoming holidays</h1>
 
         <div class="user-bookings">
