--- a/templates/spaces/single_space.html
+++ b/templates/spaces/single_space.html
@@ -6,7 +6,7 @@
     <title>Calendar</title>
 </head>
 <body>
-
+    <p><a href="/">Back to homepage</a></p>
     <h2>{{ space_info.name }}</h2>
     <br>
     <div>
