--- a/templates/login.html
+++ b/templates/login.html
@@ -32,5 +32,7 @@
                 <input type="submit" value="Submit form">
             </p>
         </form>
+
+        <p>Don't have a MBnB account yet? <a href="/signup">Sign up here.</a></p>
     </body>
 </html>
